force-app/main/default/objects/Case_Provider__c/Case_Provider__c.object-meta.xml
<CustomObject>
    <description>Stores external system data regarding resource recommendations.</description>
    <label>Case Provider</label>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>