force-app/main/default/objects/Case_Provider__c/fields/Capacity_Status__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Status__c</fullName>
    <label>Capacity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>limited</fullName>
            </value>
            <value>
                <fullName>full</fullName>
            </value>
            <value>
                <fullName>available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>