force-app/main/default/objects/Case_Provider__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case that used this provider.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Providers</relationshipLabel>
    <relationshipName>Case_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>