force-app/main/default/objects/Case_Provider__c/fields/Distance_Miles__c.field-meta.xml
<CustomField>
    <fullName>Distance_Miles__c</fullName>
    <label>Distance Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>